[#17650] Remove hardcoded style in TinyMCE that prevents button alignment
git-svn-id: http://joomlacode.org/svn/joomla/development/trunk@13548 6f6e1ebd-4c2b-0410-823f-f34bde69bce9

--- a/administrator/templates/bluestork/css/template.css
+++ b/administrator/templates/bluestork/css/template.css
@@ -1113,6 +1113,10 @@ a.pointer {
 	cursor: pointer;
 }
 
+/* -- EDITOR STYLES ----------------------------- */
+
+div.toggle-editor { margin-top: -5px; }
+
 /* -- TOOLTIP STYLES ----------------------------- */
 
 .tip {
